# arduino-unit-testing-and-development

./: CMakeLists.txt  README.md  utilities.cmake
application/BlinkExample/: blinkLib.cpp  blinkLib.h
arduino-cmake/: CMakeLists.txt
arduino-cmake/example/: CMakeLists.txt  blink.cpp  blink_lib.cpp
ut/mocks/ArduinoMocks/: Arduino.cpp  Arduino.h  GlobalMockFunctionsTemplate.h  GlobalMockTemplate.h  GlobalObjectMockTemplate.h  HardwareSerial.cpp  HardwareSerial.h  Print.h  Printable.h  SPI.cpp  SPI.h  Stream.h  WString.h  Wire.cpp  Wire.h
ut/tests/Test1/: TestSimple2.cpp
ut/tests/TestBlinkLib/: TestBlinkLib.cpp
ut/tests/TestGlobalMockTemplate/: TestGlobalMockTemplate.cpp
ut/tests/TestSerial/: TestSerial.cpp
ut/tests/TestWire/: TestWire.cpp
